feat: switch getClients to return paginated response
